modified:   13. Strings and Text Processing/Building Strings.ipynb

--- a/13. Strings and Text Processing/Building Strings.ipynb
+++ b/13. Strings and Text Processing/Building Strings.ipynb
@@ -887,7 +887,7 @@
     }
    },
    "source": [
-    "Below, you'll see it takes a **waaaaay less time** (< 1 second) to execute a loop of $100,000$ iterations when performing string concatenation using the `StringBuilder` class then it did to use the `+` operator.  "
+    "Below, you'll see it takes a **waaaaay less time** (< 1 second) to execute a loop of $100,000$ iterations when performing string concatenation using the `StringBuilder` class then it did to use the `+` operator for *half* the number of iterations!  "
    ]
   },
   {
