modified:   13. Strings and Text Processing/Building Strings.ipynb

--- a/13. Strings and Text Processing/Building Strings.ipynb
+++ b/13. Strings and Text Processing/Building Strings.ipynb
@@ -1003,6 +1003,208 @@
    "source": [
     "<br>"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Extracting All Capital Letters from a Text – Example"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The next task is to **extract all capital letters** from a string.       \n",
+    "The most viable solution to the task again is to use `StringBuilder`.    \n",
+    "    \n",
+    "We can start with an **empty** `StringBuilder`, iterate the letters of the given text character by character, verifying if the current character is **uppercase**, and then concatenating the character to the end of our `StringBuilder`. \n",
+    "   \n",
+    "Finally, we can return the final result by calling the `ToString()` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "string ExtractCapitals( string stringToExtract )\n",
+    "{\n",
+    "\n",
+    "    // Initialize a new, empty StringBuilder object,\n",
+    "    // whose buffer size is initially set to 16 characters length\n",
+    "    // which will iteratively collect our capital letters\n",
+    "    StringBuilder capitalLetters = new StringBuilder();\n",
+    "\n",
+    "\n",
+    "    // Declare a character to store each concurrent result in the loop\n",
+    "    char currentChar;\n",
+    "\n",
+    "\n",
+    "    // iterating For every character up until the end of the string to extract:\n",
+    "    for( int currentIndex = 0; currentIndex < stringToExtract.Length; currentIndex++ )\n",
+    "    {\n",
+    "\n",
+    "        // Store the current character in the string to extract\n",
+    "        currentChar = stringToExtract[ currentIndex ];\n",
+    "\n",
+    "\n",
+    "        // If the current character is uppercase,\n",
+    "        //     Append the uppercase letter to the capital letters StringBuilder\n",
+    "        if( char.IsUpper( currentChar ) )\n",
+    "            capitalLetters.Append( currentChar );\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    // After all that,\n",
+    "    // All of the capital letters from the string to extract\n",
+    "    // have been iteratively collected into the capitalLetters StringBuilder\n",
+    "    // we may now convert the result to a string\n",
+    "    return capitalLetters.ToString();\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Let's say we had the following string from which we'd want the capital letters to be extracted:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "string toBeExtracted = @\"\n",
+    "One Fish\n",
+    "Two Fish\n",
+    "REd FISH\n",
+    "Blue Fish\n",
+    "@\";"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "After calling the `ExtractCapitals(…)` method and passing a specified text as a parameter to it,   \n",
+    "we get back a string of **all capital letters in the text**, as shown below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OFTFREFISHBF"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ExtractCapitals( toBeExtracted )"
+   ]
   }
  ],
  "metadata": {
