modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -3,7 +3,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "# 12. Defining Classes"
    ]
@@ -36,8 +43,9 @@
     }
    },
    "source": [
-    "$Recall$:    \n",
-    "What's the Difference Between an Object and a Class?"
+    "### $Recall\\,\\,from \\quad$ <a src=\"../11. Creating and Using Objects | The Anatomies of Objects and Classes.ipynb\">Creating and Using Objects | The Anatomies of Objects and Classes</a>\n",
+    "  \n",
+    "### What's the Difference Between an Object and a Class?"
    ]
   },
   {
