modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -43,7 +43,7 @@
     }
    },
    "source": [
-    "### $Recall\\,\\,from \\quad$ <a href=\"../11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb\">Creating and Using Objects | The Anatomies of Objects and Classes</a>\n",
+    "$Recall\\,\\,from \\quad$ <a href=\"../11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb\">Creating and Using Objects | The Anatomies of Objects and Classes</a>\n",
     "  \n",
     "### What's the Difference Between an Object and a Class?"
    ]
