--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -43,8 +43,6 @@
     }
    },
    "source": [
-    "$Recall\\,\\,from \\quad$ <a href=\"../11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb\">Creating and Using Objects | The Anatomies of Objects and Classes</a>\n",
-    "  \n",
     "### What's the Difference Between an Object and a Class?"
    ]
   },
@@ -63,6 +61,37 @@
     "|Object|Class|\n",
     "|---|---|\n",
     "|In OOP, a **class** is called a **definition** (**specification**) of a given type of *object* from the real-world. The **class** represents a **pattern**, which describes the different *states* and *behavior* of the certain *objects* (the *copies*), which are created from this **class** (**pattern**).|**Object** is a **copy** created from the *definition* (*specification*) of a given *class*, also called an **instance**. When one **object** is created by the description of one class, we say the **object** is from *type* *class*.|"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "$Recall\\,\\,from \\quad$ <a href=\"../11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb\">Creating and Using Objects | The Anatomies of Objects and Classes</a>\n",
+    "  "
    ]
   }
  ],
