modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -231,7 +231,9 @@
    },
    "source": [
     "#### Body\n",
-    "Each `class` features a single **body**, which is defined right after the `class` declaration, and is enclosed in curly brackets `{` and `}`. The **body** of the `class` accounts for the **collection of instructions contained within these brackets**:"
+    "Each `class` features a single **body**, which is defined right after the `class` declaration, and is enclosed in curly brackets `{` and `}`.    \n",
+    "   \n",
+    "The **body** of the `class` accounts for the **collection of instructions contained within these brackets**:"
    ]
   },
   {
@@ -424,7 +426,9 @@
     }
    },
    "source": [
-    "**Properties** describe the **characteristics** of a given `class`. In many cases, the data values associated to these characteristics are kept in the $fields$ of the object."
+    "**Properties** describe the **characteristics** of a given `class`. \n",
+    "   \n",
+    "In many cases, the data values associated to these characteristics are kept in the $fields$ of the object."
    ]
   },
   {
@@ -499,7 +503,11 @@
     }
    },
    "source": [
-    "**Methods** are named blocks of programming code. They perform various **functional actions** and through them, the objects achieve their behavior based on the `class` type. **Methods** execute the implemented programming logic (algorithms), often using the properties which the object has defined."
+    "**Methods** are named blocks of programming code.   \n",
+    "    \n",
+    "They perform various **functional actions** and through them, the objects achieve their behavior based on the `class` type. \n",
+    "   \n",
+    "**Methods** execute the implemented programming logic (algorithms), often using the $properties$ which the object has defined:"
    ]
   },
   {
