modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -283,71 +283,6 @@
     }
    },
    "source": [
-    "#### Constructor"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "Defines the $parameters$ used for **creating new objects**:"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "```c#\n",
-    "public Pizza( [someType1 someName1, ..., someTypeN someNameN] )\n",
-    "{\n",
-    "    // Assign these parameters here\n",
-    "}\n",
-    "```"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "<br>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
     "#### Fields"
    ]
   },
@@ -457,8 +392,72 @@
     "    {\n",
     "        this.name = value;\n",
     "    }\n",
-    "    \n",
     "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Constructor"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Defines the $parameters$ used for **creating new objects**:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "public Pizza( [someType1 someName1, ... , someTypeN someNameN] )\n",
+    "{\n",
+    "    // Assign these parameters here\n",
+    "}\n",
+    "```"
    ]
   },
   {
@@ -529,6 +528,214 @@
     "}\n",
     "```"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### All the Elements Put Together: Pizza Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Class Declaration\n",
+    "public class Pizza\n",
+    "{                                                                  // \n",
+    "                                                                   //\n",
+    "    // Field Declarations -----------------------------------------//\n",
+    "    private string sauce,                                          // \n",
+    "                   cheese,                                         //\n",
+    "                   toppings;                                       //\n",
+    "    public  bool   isHotNReady;                                    //\n",
+    "    //-------------------------------------------------------------//\n",
+    "                                                                   //\n",
+    "                                                                   //\n",
+    "    // Property Definitions -------------------------------------- //\n",
+    "    private string Sauce                                           //\n",
+    "    {                                                              //      \n",
+    "        get { return this.sauce; }                                 //\n",
+    "                                                                   //\n",
+    "        set { this.sauce = value; }                                //\n",
+    "    }                                                              //\n",
+    "    // ----------------------------------------------------------- //\n",
+    "    private string Cheese                                          //\n",
+    "    {                                                              //\n",
+    "        get { return this.cheese; }                                //\n",
+    "                                                                   //\n",
+    "        set { this.cheese = value; }                               //\n",
+    "    }                                                              //\n",
+    "    // ----------------------------------------------------------- //     The Class Body\n",
+    "    private string Toppings                                        //\n",
+    "    {                                                              //\n",
+    "        get { return this.toppings; }                              //\n",
+    "                                                                   //\n",
+    "        set { this.toppings = value; }                             //\n",
+    "    }                                                              //\n",
+    "    // ----------------------------------------------------------- //\n",
+    "                                                                   //\n",
+    "                                                                   //   \n",
+    "    // Constructor ----------------------------------------------- //\n",
+    "    public Pizza( string sauce, string cheese, string toppings )   //\n",
+    "    {                                                              //\n",
+    "        this.Sauce = sauce;                                        //\n",
+    "        this.Cheese = cheese;                                      //\n",
+    "        this.Toppings = toppings;                                  //\n",
+    "    }                                                              //\n",
+    "    // ----------------------------------------------------------- //\n",
+    "                                                                   //\n",
+    "                                                                   //\n",
+    "    // Method ---------------------------------------------------- //\n",
+    "    public void Bake()                                             //\n",
+    "    {                                                              //\n",
+    "        Console.WriteLine(\"Somewhere, an oven timer goes DING!\");  //\n",
+    "        this.isHotNReady = true;                                   //\n",
+    "    }                                                              //\n",
+    "    // ----------------------------------------------------------- //\n",
+    "}                                                                  //\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Pizza Margherita = new Pizza(\"Marinara\", \"Mozarella\", \"Fresh Basil, Sliced Tomato\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Somewhere, an oven timer goes DING!\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Margherita.Bake();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>True</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Margherita.isHotNReady"
+   ]
   }
  ],
  "metadata": {
@@ -542,19 +749,8 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [
-       "c#",
-       "C#"
-      ],
-      "languageName": "C#",
+      "aliases": [],
       "name": "csharp"
-     },
-     {
-      "aliases": [
-       "frontend"
-      ],
-      "languageName": null,
-      "name": "vscode"
      }
     ]
    }
