modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -601,7 +601,7 @@
     "                                                                   //\n",
     "        set { this.cheese = value; }                               //\n",
     "    }                                                              //\n",
-    "    // ----------------------------------------------------------- //     The Class Body\n",
+    "    // ----------------------------------------------------------- //     Class Body\n",
     "    private string Toppings                                        //\n",
     "    {                                                              //\n",
     "        get { return this.toppings; }                              //\n",
