modified:   14. Defining Classes/The Anatomy of a Class.ipynb new file:   14. Defining Classes/_img/PizzaClass.png

--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -556,7 +556,37 @@
     }
    },
    "source": [
-    "### All the Elements Put Together: Pizza Class"
+    "### All The Elements Put Together: A Pizza Class"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"_img/PizzaClass.png\" style=\"width: 400px; display: block; margin: auto\"></img>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Below we use the elements previously discussed to implement the **specification** for a Pizza: "
    ]
   },
   {
@@ -633,6 +663,36 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Having now defined our `Pizza` `class`, we may instantiate an object modeled oafter any specific type of real-life Pizza we choose:  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -648,12 +708,16 @@
    },
    "outputs": [],
    "source": [
-    "Pizza Margherita = new Pizza(\"Marinara\", \"Mozarella\", \"Fresh Basil, Sliced Tomato\");"
+    "Pizza Margherita = new Pizza(\n",
+    "    \"Marinara\",\n",
+    "    \"Mozarella\",\n",
+    "    \"Fresh Basil, Sliced Tomato\"\n",
+    ");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -680,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
