modified:   14. Defining Classes/The Anatomy of a Class.ipynb new file:   14. Defining Classes/_img/PizzaObject.png

--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -801,6 +801,21 @@
    "source": [
     "Margherita.isHotNReady"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"_img/PizzaObject.png\" style=\"width: 400px; display: block; margin: auto\"></img>"
+   ]
   }
  ],
  "metadata": {
