--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -708,7 +708,7 @@
    },
    "outputs": [],
    "source": [
-    "Pizza Margherita = new Pizza(\n",
+    "Pizza margherita = new Pizza(\n",
     "    \"Marinara\",\n",
     "    \"Mozarella\",\n",
     "    \"Fresh Basil, Sliced Tomato\"\n",
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -729,22 +729,14 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Somewhere, an oven timer goes DING!\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Margherita.Bake();"
+    "margherita.Bake();"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -756,48 +748,7 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"dni-plaintext\"><pre>True</pre></div><style>\r\n",
-       ".dni-code-hint {\r\n",
-       "    font-style: italic;\r\n",
-       "    overflow: hidden;\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       ".dni-treeview {\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       ".dni-treeview td {\r\n",
-       "    vertical-align: top;\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "details.dni-treeview {\r\n",
-       "    padding-left: 1em;\r\n",
-       "}\r\n",
-       "table td {\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "table tr { \r\n",
-       "    vertical-align: top; \r\n",
-       "    margin: 0em 0px;\r\n",
-       "}\r\n",
-       "table tr td pre \r\n",
-       "{ \r\n",
-       "    vertical-align: top !important; \r\n",
-       "    margin: 0em 0px !important;\r\n",
-       "} \r\n",
-       "table th {\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "</style>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Margherita.isHotNReady"
    ]
@@ -816,6 +767,115 @@
    "source": [
     "<img src=\"_img/PizzaObject.png\" style=\"width: 400px; display: block; margin: auto\"></img>"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### The Nature of a Pizza Object"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Let’s revise, when we create a Pizza object in $.NET$, it consists of **two parts** \n",
+    "1. the **significant part** (**data**), which contains its data and it is located in the memory of the operating system called a dynamic memory (heap), \n",
+    "2. a **reference part** to this object, which resides in the other part of the operating system’s memory, where are stored the local variable and parameters of the methods (the program execution stack)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"_img/PizzaObjectRef.jpg\" style=\"width: 400px; display: block; margin: auto\"></img>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Let's say we are interested in declaring a new object from a particular `class`, but we do not want the object to be initially associated to anything.\n",
+    "\n",
+    "We can then assign to it the value `null`. In $C\\#$, The reserved word `null` language means that the variable *does not point to any object* (there is a missing value):"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"_img/PizzaNullObjectRef.jpg\" style=\"width: 400px; display: block; margin: auto\"></img>"
+   ]
   }
  ],
  "metadata": {
@@ -829,8 +889,72 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [],
+      "aliases": [
+       "c#",
+       "C#"
+      ],
+      "languageName": "C#",
       "name": "csharp"
+     },
+     {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "name": "vscode"
+     },
+     {
+      "aliases": [
+       "f#",
+       "F#"
+      ],
+      "languageName": "F#",
+      "name": "fsharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "HTML",
+      "name": "html"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "languageName": "KQL",
+      "name": "kql"
+     },
+     {
+      "aliases": [],
+      "languageName": "Mermaid",
+      "name": "mermaid"
+     },
+     {
+      "aliases": [
+       "powershell"
+      ],
+      "languageName": "PowerShell",
+      "name": "pwsh"
+     },
+     {
+      "aliases": [],
+      "languageName": "SQL",
+      "name": "sql"
+     },
+     {
+      "aliases": [],
+      "name": "value"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
