modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -795,24 +795,7 @@
     }
    },
    "source": [
-    "### The Nature of a Pizza Object"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "Let’s revise, when we create a Pizza object in $.NET$, it consists of **two parts** \n",
-    "1. the **significant part** (**data**), which contains its data and it is located in the memory of the operating system called a dynamic memory (heap), \n",
-    "2. a **reference part** to this object, which resides in the other part of the operating system’s memory, where are stored the local variable and parameters of the methods (the program execution stack)."
+    "We may visualize the resultant `margherita` **object** as follows: "
    ]
   },
   {
@@ -843,38 +826,6 @@
    },
    "source": [
     "<br>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "Let's say we are interested in declaring a new object from a particular `class`, but we do not want the object to be initially associated to anything.\n",
-    "\n",
-    "We can then assign to it the value `null`. In $C\\#$, The reserved word `null` language means that the variable *does not point to any object* (there is a missing value):"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "<img src=\"_img/PizzaNullObjectRef.jpg\" style=\"width: 400px; display: block; margin: auto\"></img>"
    ]
   }
  ],
